Destroy ArcNotificationManager before shutting down MessageCenter.

credit to jamescook@ for the fix

Bug: 875031
Change-Id: I4f1f0c10e45d768da0515400d0666a08937c004b
Reviewed-on: https://chromium-review.googlesource.com/1178935
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584094}
Former-commit-id: d4c2f4e729bb4fb26571f681d4b38e839fd37c29